syntax = "proto3";

package greet;

option go_package ="grpc-practice/greet/proto";

message GreetRequest{
    string first_name=1;


}

message GreetResponce{
    string result=1;
}


service GreetService{
    rpc Greet (GreetRequest) returns (GreetResponce);//unary
    rpc GreetManyTimes(GreetRequest) returns (stream GreetResponce);//server streaming
    rpc LongGreet(stream GreetRequest) returns (GreetResponce);//client streaming
}
